test/tests/stages/18_structures/invalid_types/extra_credit/union_initializers/union_init_wrong_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  union
  identifier(u)
  {
  long
  *
  identifier(ptr)
  ;
  double
  identifier(d)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  identifier(my_union)
  =
  {
  const double(1.0)
  }
  ;
  }
